--- a/btcmarkets/pubspec.yaml
+++ b/btcmarkets/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   crypto: 2.0.6
   pointycastle: 1.0.1
   web_socket_channel: "^1.0.12"
+  flutter_sticky_header: "^0.4.0"
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +45,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/images/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
