--- a/btcmarkets/pubspec.yaml
+++ b/btcmarkets/pubspec.yaml
@@ -29,7 +29,10 @@ dependencies:
   pointycastle: 1.0.1
   web_socket_channel: "^1.0.12"
   flutter_sticky_header: "^0.4.0"
-
+  intl: ">=0.15.8"
+  flutter_candlesticks: ^0.1.4
+  html: ^0.14.0+2
+ 
 dev_dependencies:
   flutter_test:
     sdk: flutter
