--- a/btcmarkets/pubspec.yaml
+++ b/btcmarkets/pubspec.yaml
@@ -32,7 +32,10 @@ dependencies:
   intl: ">=0.15.8"
   flutter_candlesticks: ^0.1.4
   html: ^0.14.0+2
- 
+  url_launcher: ^5.0.3
+  webview_flutter: ^0.3.9+1
+  flutter_webview_plugin: ^0.3.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
