Settings enc and dec, password screens

--- a/btcmarkets/ios/Runner/Info.plist
+++ b/btcmarkets/ios/Runner/Info.plist
@@ -48,5 +48,7 @@
 		<key>NSAllowsArbitraryLoadsInWebContent</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Using the camera for scanning QR codes</string>
 </dict>
 </plist>
