--- a/btcmarketsapi/pubspec.yaml
+++ b/btcmarketsapi/pubspec.yaml
@@ -3,4 +3,6 @@ dependencies:
   dio: 2.1.3
   crypto: 2.0.6
   pointycastle: 1.0.1
+  hex: ^0.1.2
   web_socket_channel: "^1.0.12"
+  intl: ">=0.15.8"
