--- a/btcmarkets/pubspec.yaml
+++ b/btcmarkets/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   url_launcher: ^5.0.3
   webview_flutter: ^0.3.9+1
   flutter_webview_plugin: ^0.3.5
+  shared_preferences: ^0.5.3+1
+  qr_reader: ^0.1.3
+  
 
 dev_dependencies:
   flutter_test:
